# ftputil-rosrelease

./: .hg_archival.txt  .hgtags  .travis.yml  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml  travis_checks.bash
debian/: changelog  control  gbp.conf  rules
indigo/: CMakeLists.txt  package.xml
kinetic/: package.xml  setup.py
rpm/: ros-indigo-python-ftputil.spec  ros-kinetic-python-ftputil.spec  template.spec
